force-app/src/objects/TR1__Screening__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Certificate_Number__c</fullName>
        <label>Certificate Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Certificate__c</fullName>
        <label>Certificate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Disclaimer</relationshipLabel>
        <relationshipName>Disclaimers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Screenings</relationshipLabel>
        <relationshipName>Screenings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Issuer__c</fullName>
        <label>Issuer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Screenings</relationshipLabel>
        <relationshipName>Screenings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Valid_From_Date__c</fullName>
        <label>Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <label>Screening</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Screening Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screenings</pluralLabel>
    <recordTypes>
        <fullName>TR1__Disclaimer</fullName>
        <active>true</active>
        <label>Disclaimer</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>